header rotation mobile fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -339,6 +339,7 @@ body.dark-mode {
             width: 100vw !important;
             font-size: 2vh !important;
             margin-top: 16px;
+            transform: rotate(0deg) !important;
             writing-mode: horizontal-tb !important;
             -webkit-writing-mode: horizontal-tb !important;
             -ms-writing-mode: lr-tb !important;
